einstellung_derive/src/trybuild_tests/custom_merge_wrong_signature.stderr
error[E0308]: arguments to this function are incorrect
 --> src/trybuild_tests/custom_merge_wrong_signature.rs
  |
  | #[derive(Config)]
  |          ^^^^^^
  |          |
  |          expected `String`, found `Option<String>`
  |          expected `String`, found `Option<String>`
  |
  = note: expected struct `std::string::String`
               found enum `std::option::Option<std::string::String>`
  = note: expected struct `std::string::String`
               found enum `std::option::Option<std::string::String>`
note: function defined here
 --> src/trybuild_tests/custom_merge_wrong_signature.rs
  |
  | pub fn merge_hosts(_: String, b: String) -> String {
  |        ^^^^^^^^^^^ ---------  ---------
  = note: this error originates in the derive macro `Config` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider using `Option::expect` to unwrap the `std::option::Option<std::string::String>` value, panicking if the value is an `Option::None`
  |
7 | #[derive(Config.expect("REASON"))]
  |                +++++++++++++++++
help: consider using `Option::expect` to unwrap the `std::option::Option<std::string::String>` value, panicking if the value is an `Option::None`
  |
7 | #[derive(Config.expect("REASON"))]
  |                +++++++++++++++++

error[E0308]: mismatched types
 --> src/trybuild_tests/custom_merge_wrong_signature.rs
  |
  | #[derive(Config)]
  |          ^^^^^^ expected `Option<String>`, found `String`
  |
  = note: expected enum `std::option::Option<std::string::String>`
           found struct `std::string::String`
  = note: this error originates in the derive macro `Config` (in Nightly builds, run with -Z macro-backtrace for more info)
